--- a/src/components/dashboard/style.css
+++ b/src/components/dashboard/style.css
@@ -1,10 +1,20 @@
-.card {
-    width: 100%;
-    height: 200px;
+.dashboard-card {
+    width: 280px;
+    height: 175px;
     margin: 0 5px;
-    background-color: rgb(37, 37, 37) !important;
+    background-color: #784b1c !important;
+    border-radius: 5px;
     color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media only screen and (max-width: 475px) {
+    .dashboard-card {
+        width: 160px;
+        height: 105px;
+        margin: 10px;
+    }
+
 }
