--- a/src/components/project-home/style.css
+++ b/src/components/project-home/style.css
@@ -1,29 +1,38 @@
-.card {
+.card-project-home {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 230px;
     height: 120px;
     margin-right: 10px;
-    margin-left: 0;
+    margin-left: 10px;
     background-color: #784b1c !important;
     color: #fff;
+    border-radius: 5px;
+    
+}
+.card-project-home img {
+    height: 26px;
+    width: 26px;
+    margin-right: 10px;
+}
+
+.card-project-home h3 {
+    font-size: 16px;
+    color: #d7d7d7;
+    text-align: center;
+}
+.card-project-home-inner {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.card img {
-    height: 26px;
-    width: 26px;
-    margin-bottom: 10px;
-}
-
-.card h3 {
-    font-size: 16px;
-    color: #d7d7d7;
-}
-
 @media only screen and (max-width: 475px) {
-    .card {
-        width: 155px;
-        margin-bottom: 10px;
+    .card-project-home {
+        min-width: 145px;
+        height: 80px;
+        /* margin-bottom: 10px; */
         margin-left: 0;
+        padding: 0 20px;
     }
 }
