--- a/src/components/project-walkthrough/style.css
+++ b/src/components/project-walkthrough/style.css
@@ -13,3 +13,16 @@
     height: 400px;
     width: 450px;
 }
+
+.video-sec {
+    width: 100px;
+    height: 600px;
+}
+
+@media only screen and (max-width: 475px) {
+    .video-sec {
+        width: 250px;
+        height: 200px;
+    }
+    
+}
