--- a/src/screens/customer-entry/style.css
+++ b/src/screens/customer-entry/style.css
@@ -12,6 +12,8 @@
     width: 100%;
     border-top: 1px solid rgb(215 215 215);
     border-bottom: 1px solid rgb(215 215 215);
+    box-shadow: rgb(17 12 46 / 15%) 0px 48px 100px 0px;
+    border-radius: 5px;
     padding: 30px 0;
     display: flex;
     align-items: center;
@@ -60,6 +62,9 @@
 
 @media only screen and (max-width: 475px) {
     .container-sec {
-        height: auto;
+        height: 100vh;
+    }
+    .border-sec {
+        margin: 0 15px;
     }
 }
