--- a/src/screens/dashboard/style.css
+++ b/src/screens/dashboard/style.css
@@ -18,3 +18,20 @@
     box-shadow: 0 0 1px 3px #2b160e;
     color: #fff;
 }
+
+
+
+.dashboard-card-sec {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 475px) {
+    /* .container-sec-dashboard {
+        height: auto;
+        padding: 70px 0;
+    } */
+}
