--- a/src/screens/project-inventory/style.css
+++ b/src/screens/project-inventory/style.css
@@ -1,6 +1,9 @@
 .container-sec-project-inventory {
     height: auto;
 }
+.header-title-mobile {
+    display: none;
+}
 .header-title .building-status-sec-one, .header-title .building-status-sec-two {
     display: flex;
     justify-content: center;
@@ -53,6 +56,12 @@
 
 
 @media only screen and (max-width: 475px) {
+    .header-title-desktop {
+        display: none;
+    }
+    .header-title-mobile {
+        display: block;
+    }
     .project-info-inventory {
         flex-direction: column;
     }
