--- a/src/components/project-home/style.css
+++ b/src/components/project-home/style.css
@@ -2,14 +2,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 230px;
+    min-width: 230px;
     height: 120px;
     margin-right: 10px;
     margin-left: 10px;
-    background-color: #784b1c !important;
-    color: #fff;
+    background-color: #ededed !important;
     border-radius: 5px;
-    
+    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+    border: 1px solid #e3e3e3; 
+}
+.card-project-home:hover {
+    background-color: rgb(215 215 215) !important;
+    cursor: pointer;
+    transition: 0.3s;
 }
 .card-project-home img {
     height: 26px;
@@ -19,7 +24,7 @@
 
 .card-project-home h3 {
     font-size: 16px;
-    color: #d7d7d7;
+    color: #4a2e23;
     text-align: center;
 }
 .card-project-home-inner {
