--- a/src/components/project-floor-plan/style.css
+++ b/src/components/project-floor-plan/style.css
@@ -2,16 +2,18 @@
     width: 230px;
     height: 120px;
     margin-right: 10px;
+    margin-bottom: 10px;
     margin-left: 0;
-    background-color: #784b1c !important;
-    color: #fff;
+    background-color: #ededed !important;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 5px;
+    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+    border: 1px solid #e3e3e3; 
 }
 .floor-plan-card:hover {
-    background-color: #4d2e0c !important;
+    background-color: rgb(215 215 215) !important;
     cursor: pointer;
     transition: 0.3s;
 }
@@ -23,7 +25,7 @@
 
 .floor-plan-card h3 {
     font-size: 16px;
-    color: #d7d7d7;
+    color: #4a2e23;
 }
 
 @media only screen and (max-width: 475px) {
