--- a/src/components/project-inventory/style.css
+++ b/src/components/project-inventory/style.css
@@ -6,6 +6,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+    border: 1px solid #e3e3e3;
 }
 
 .inventory-card-container {
@@ -30,7 +32,8 @@
     color: #d7d7d7;
 }
 .inventory-single-block:hover {
-    background-color: #402101 !important;
+    background-color: #242424 !important;
+    color: #fff !important;
     cursor: pointer;
 }
 
