--- a/src/screens/login/style.css
+++ b/src/screens/login/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 .login-btn {
-    background-color: #4a2e23 !important;
+    background-color: #18181D !important;
     border-color: #fff !important;
     width: 100%;
     margin-top: 20px;
