--- a/src/screens/project-inventory/style.css
+++ b/src/screens/project-inventory/style.css
@@ -8,23 +8,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     padding: 10px;
     margin: 10px 0;
-    color: #d7d7d7;
-    border: 1px solid rgb(145, 112, 21);
+    border: 1px solid rgb(216, 216, 216);
 
 }
 .header-title .building-status-sec-one {
-    background-color: #a5896a;
+    background-color: #e1e1e1;
+    color: #4a2e23;
 }
 .header-title .building-status-sec-two {
-    background-color: #784b1c;
+    background-color: #9b9b9b;
+    color: #fff;
 }
 
-.project-logo img {
+/* .project-logo img {
     height: 130px;
-}
+} */
 
 .inventory-header {
     border: 2px solid #cdcdcd;
