UI changes made

--- a/src/screens/project-home/style.css
+++ b/src/screens/project-home/style.css
@@ -120,6 +120,7 @@
         align-items: center;
         width: 100%;
         border-top: none;
+        text-align: center;
     }
     .project-home-footer {
         justify-content: space-around;
