--- a/src/screens/project-home/style.css
+++ b/src/screens/project-home/style.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: space-between;
+    justify-content: end;
 }
 
 .project-home-header .project-logo img {
@@ -17,13 +17,13 @@
 /* PROJECT INFO */
 .project-info {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     /* align-items: center; */
     justify-content: center;
     border: 1px solid #d4d4d4;
     border-radius: 5px;
     padding: 2px;
-    width: 23%;
+    width: 40%;
     background-color: #ededed ;
     color: #4a2e23;
 }
@@ -31,7 +31,8 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    border-top: 1px solid rgb(202, 202, 202);
+    /* border-top: 1px solid rgb(202, 202, 202); */
+    margin: 0 10px;
 }
 .project-info-inner-row-first {
     border: none !important;
@@ -47,11 +48,11 @@
 /* PROJECT MENU */
 .project-home-menu {
     display: flex;
-    /* flex-wrap: wrap; */
-    overflow-x: scroll;
+    flex-wrap: wrap;
+    /* overflow-x: scroll; */
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     margin-top: 55px;
     border: 2px solid #cdcdcd;
     border-radius: 5px;
@@ -104,19 +105,20 @@
     
     .project-home-menu {
         flex-direction: row !important;
-        flex-wrap: nowrap;
-        justify-content: flex-start;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 20px 0px !important;
     }
     .project-home-menu::-webkit-scrollbar {
         display: none;
     }
     .project-info {
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         width: 100%;
     }
     .project-info-inner-row {
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         width: 100%;
         border-top: none;
