--- a/src/components/project-home/style.css
+++ b/src/components/project-home/style.css
@@ -2,8 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 230px;
-    height: 120px;
+    /* min-width: 190px; */
+    width: 190px;
+    height: 90px;
     margin-right: 10px;
     margin-left: 10px;
     background-color: #ededed !important;
@@ -19,7 +20,7 @@
 .card-project-home img {
     height: 26px;
     width: 26px;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 .card-project-home h3 {
@@ -34,10 +35,12 @@
 }
 @media only screen and (max-width: 475px) {
     .card-project-home {
-        min-width: 145px;
+        /* min-width: 145px; */
         height: 80px;
-        /* margin-bottom: 10px; */
+        width: 135px;
+        margin-bottom: 10px;
         margin-left: 0;
+        margin-right: 0;
         padding: 0 20px;
     }
 }
