--- a/src/screens/customer-entry/style.css
+++ b/src/screens/customer-entry/style.css
@@ -16,6 +16,7 @@
     border-radius: 5px;
     padding: 30px 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background: #fff;
